SVG tweak for safari layout bug

--- a/assets/sass/sections/_header.scss
+++ b/assets/sass/sections/_header.scss
@@ -83,7 +83,7 @@
 		svg {
 			max-width: 120px;
 			width: 70%;
-			height: auto;
+			height: 100%;
 		}
 	}
 
